@@ -3,6 +3,12 @@
 	* Source/NSConnection.m: Joined split-line string constant
 
 2009-08-21 Doug Simons <dpsimons@testplant.com>
+	
+	* Source/NSUserDefaults.m: Remove one of the locks in +userLanguages
+	to avoid a deadlock.
+	Patch applied by: Gregory Casamento <greg.casamento@gmail.com>
+	
+2009-08-21 Doug Simons <dpsimons@testplant.com>
 
 	* Source/NSUserDefaults.m: Changes to bulletproof NSUserDefaults from
 	deadlocks when it is accessed by more than one thread.
